<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_books">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pusl2023_t.ui.fragments.AllBooksFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard"
        />

    <fragment
        android:id="@+id/navigation_books"
        android:name="com.example.pusl2023_t.ui.fragments.MyBooksFragment"
        android:label="@string/title_books"
        tools:layout="@layout/fragment_my_books" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.pusl2023_t.ui.fragments.RequestsFragment"
        android:label="@string/title_requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/navigation_sold_books"
        android:name="com.example.pusl2023_t.ui.fragments.BorrowedBooksFragment"
        android:label="@string/title_borrwed"
        tools:layout="@layout/fragment_borrowed_books"

        />
</navigation>

